# main.py
@@ -35,7 +35,6 @@ class Main(KytosNApp):
 
     def execute(self):
         """Execute once when the napp is running."""
-        log.info("Executing of_multi_table")
 
     @staticmethod
     def get_pipeline_controller():
@@ -46,16 +45,16 @@ class Main(KytosNApp):
     @validate_openapi(spec)
     def add_pipeline(self, data):
         """Add pipeline"""
-        log.debug("add_pipeline /v1/pipeline")
+        log.debug(f"add_pipeline /v1/pipeline content: {data}")
         try:
             _id = self.pipeline_controller.insert_pipeline(data)
         except ValidationError as err:
             msg = self.error_msg(err.errors())
-            log.debug("add_pipeline result %s %s", msg, 400)
+            log.debug(f"add_pipeline result {msg} 400")
             raise BadRequest(msg) from err
-        msg = f"Pipeline {_id} created"
-        log.debug("add_pipeline result %s %s", _id, 201)
-        return jsonify(msg), 201
+        msg = {"id": _id}
+        log.debug(f"add_pipeline result {msg} 201")
+        return jsonify({"id": _id}), 201
 
     @rest("/v1/pipeline", methods=["GET"])
     def list_pipelines(self):
@@ -64,60 +63,58 @@ class Main(KytosNApp):
         args = request.args.to_dict()
         status = args.get("status", None)
         pipelines = self.pipeline_controller.get_pipelines(status)
-        log.debug("list_pipelines result %s %s", pipelines, 201)
-        return jsonify(pipelines), 201
+        return jsonify(pipelines), 200
 
     @rest("/v1/pipeline/<pipeline_id>", methods=["GET"])
     def get_pipeline(self, pipeline_id):
         """Get pipeline by pipeline_id"""
-        log.debug("get_pipeline /v1/pipeline/%s", pipeline_id)
+        log.debug(f"get_pipeline /v1/pipeline/{pipeline_id}")
         pipeline = self.pipeline_controller.get_pipeline(pipeline_id)
         if not pipeline:
             msg = f"pipeline_id {pipeline_id} not found"
-            log.debug("get_pipeline result %s %s", msg, 404)
+            log.debug(f"get_pipeline result {msg} 404")
             raise NotFound(msg)
-        log.debug("get_pipeline result %s %s", pipeline, 201)
-        return jsonify(pipeline), 201
+        return jsonify(pipeline), 200
 
     @rest("/v1/pipeline/<pipeline_id>", methods=["DELETE"])
     def delete_pipeline(self, pipeline_id):
         """Delete pipeline by pipeline_id"""
-        log.debug("delete_pipeline /v1/pipeline/%s", pipeline_id)
+        log.debug(f"delete_pipeline /v1/pipeline/{pipeline_id}")
         result = self.pipeline_controller.delete_pipeline(pipeline_id)
         if result == 0:
             msg = f"pipeline_id {pipeline_id} not found"
-            log.debug("delete_pipeline result %s %s", msg, 404)
+            log.debug(f"delete_pipeline result {msg} 404")
             raise NotFound(msg)
         msg = f"Pipeline {pipeline_id} deleted successfully"
-        log.debug("delete_pipeline result %s %s", msg, 201)
-        return jsonify(msg), 201
+        log.debug(f"delete_pipeline result {msg} 201")
+        return jsonify(msg), 200
 
     @rest("/v1/pipeline/<pipeline_id>/enable", methods=["POST"])
     def enable_pipeline(self, pipeline_id):
         """Enable pipeline"""
-        log.debug("enable_pipeline /v1/pipeline/%s/enable", pipeline_id)
+        log.debug(f"enable_pipeline /v1/pipeline/{pipeline_id}/enable")
         try:
             self.pipeline_controller.update_status(pipeline_id, "enabled")
         except NotFound as err:
             msg = f"Pipeline {pipeline_id} not found"
-            log.debug("enable_pipeline result %s %s", msg, 404)
+            log.debug(f"enable_pipeline result {msg} 404")
             raise err
         msg = f"Pipeline {pipeline_id} enabled"
-        log.debug("enable_pipeline result %s %s", msg, 201)
+        log.debug(f"enable_pipeline result {msg} 201")
         return jsonify(msg), 201
 
     @rest("/v1/pipeline/<pipeline_id>/disable", methods=["POST"])
     def disable_pipeline(self, pipeline_id):
         """Disable pipeline"""
-        log.debug("disable_pipeline /v1/pipeline/%s/disable", pipeline_id)
+        log.debug(f"disable_pipeline /v1/pipeline/{pipeline_id}/disable")
         try:
             self.pipeline_controller.update_status(pipeline_id, "disabled")
         except NotFound as err:
             msg = f"Pipeline {pipeline_id} not found"
-            log.debug("disable_pipeline result %s %s", msg, 404)
+            log.debug(f"disable_pipeline result {msg} 404")
             raise err
         msg = f"Pipeline {pipeline_id} disabled"
-        log.debug("disable_pipeline result %s %s", msg, 201)
+        log.debug(f"disable_pipeline result {msg} 201")
         return jsonify(msg), 201
 
     @staticmethod
@@ -126,7 +123,7 @@ class Main(KytosNApp):
         msg = ""
         for err in error_list:
             for value in err['loc']:
-                msg += value + ", "
+                msg += str(value) + ", "
             msg = msg[:-2]
             msg += ": " + err["msg"] + "; "
         return msg[:-2]
@@ -136,4 +133,3 @@ class Main(KytosNApp):
 
         If you have some cleanup procedure, insert it here.
         """
-        log.info("Shutting down of_multi_table")
